--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Mobi Center</title>
     <link rel="stylesheet" href="./src/index.css">
   </head>
   <body style="background-color: #ffff00;">
