--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./src/index.css">
   </head>
   <body style="background-color: #ffff00;">
-    <div id="root"></div>
+    <div id="root" style="width: 100%; height: 100vh; overflow: hidden;"></div>
     <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
